--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "commonjs", // <--- Important
     "target": "es2020",
     "esModuleInterop": true,
-    "strict": true,
+    "strict": false,
     "skipLibCheck": true,
-    "jsx": "react",
-    "moduleDetection": "force",
+    "allowSyntheticDefaultImports": true,
   },
 }
